# MinCTest

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake_publish.yml
cmake/: CompileOptions.cmake
include/MinCTest/: MinCTest.h
src/: CMakeLists.txt  MinCTest.c
test/: CMakeLists.txt  testrunner.c
test/basic/: CMakeLists.txt  empties.c  empties2.c
